Update the code and make NOtes

--- a/End_to_end_project/Project.ipynb
+++ b/End_to_end_project/Project.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,62 +36,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>cgpa</th>\n",
-       "      <th>iq</th>\n",
-       "      <th>placement</th>\n",
+       "      <th>version https://git-lfs.github.com/spec/v1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>oid sha256:dc040ed1a36e7c489bf904ba11e105c0da5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>size 1584</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  cgpa     iq  placement\n",
-       "0           0   6.8  123.0          1\n",
-       "1           1   5.9  106.0          0\n",
-       "2           2   5.3  121.0          0\n",
-       "3           3   7.4  132.0          1\n",
-       "4           4   5.8  142.0          0"
+       "          version https://git-lfs.github.com/spec/v1\n",
+       "0  oid sha256:dc040ed1a36e7c489bf904ba11e105c0da5...\n",
+       "1                                          size 1584"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,16 +78,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100 entries, 0 to 99\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column      Non-Null Count  Dtype  \n",
-      "---  ------      --------------  -----  \n",
-      " 0   Unnamed: 0  100 non-null    int64  \n",
-      " 1   cgpa        100 non-null    float64\n",
-      " 2   iq          100 non-null    float64\n",
-      " 3   placement   100 non-null    int64  \n",
-      "dtypes: float64(2), int64(2)\n",
-      "memory usage: 3.3 KB\n"
+      "RangeIndex: 2 entries, 0 to 1\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column                                      Non-Null Count  Dtype \n",
+      "---  ------                                      --------------  ----- \n",
+      " 0   version https://git-lfs.github.com/spec/v1  2 non-null      object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 148.0+ bytes\n"
      ]
     }
    ],
@@ -131,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100, 4)"
+       "(2, 1)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,50 +139,26 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>iq</th>\n",
-       "      <th>placement</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>123.0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>106.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>121.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>132.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>142.0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      iq  placement\n",
-       "0  123.0          1\n",
-       "1  106.0          0\n",
-       "2  121.0          0\n",
-       "3  132.0          1\n",
-       "4  142.0          0"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [0, 1]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +187,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Using cached matplotlib-3.10.3-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
+      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
+      "  Using cached contourpy-1.3.2-cp312-cp312-win_amd64.whl.metadata (5.5 kB)\n",
+      "Collecting cycler>=0.10 (from matplotlib)\n",
+      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
+      "  Downloading fonttools-4.58.2-cp312-cp312-win_amd64.whl.metadata (108 kB)\n",
+      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
+      "  Using cached kiwisolver-1.4.8-cp312-cp312-win_amd64.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: numpy>=1.23 in d:\\programming\\machine_learning_concept\\.env\\lib\\site-packages (from matplotlib) (2.2.6)\n",
+      "Requirement already satisfied: packaging>=20.0 in d:\\programming\\machine_learning_concept\\.env\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Collecting pillow>=8 (from matplotlib)\n",
+      "  Using cached pillow-11.2.1-cp312-cp312-win_amd64.whl.metadata (9.1 kB)\n",
+      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
+      "  Using cached pyparsing-3.2.3-py3-none-any.whl.metadata (5.0 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in d:\\programming\\machine_learning_concept\\.env\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: six>=1.5 in d:\\programming\\machine_learning_concept\\.env\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+      "Using cached matplotlib-3.10.3-cp312-cp312-win_amd64.whl (8.1 MB)\n",
+      "Using cached contourpy-1.3.2-cp312-cp312-win_amd64.whl (223 kB)\n",
+      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Downloading fonttools-4.58.2-cp312-cp312-win_amd64.whl (2.2 MB)\n",
+      "   ---------------------------------------- 0.0/2.2 MB ? eta -:--:--\n",
+      "   ------------------ --------------------- 1.0/2.2 MB 6.3 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 1.6/2.2 MB 4.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 2.1/2.2 MB 3.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 2.2/2.2 MB 3.1 MB/s eta 0:00:00\n",
+      "Using cached kiwisolver-1.4.8-cp312-cp312-win_amd64.whl (71 kB)\n",
+      "Using cached pillow-11.2.1-cp312-cp312-win_amd64.whl (2.7 MB)\n",
+      "Using cached pyparsing-3.2.3-py3-none-any.whl (111 kB)\n",
+      "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+      "\n",
+      "   ---------------------------------------- 0/7 [pyparsing]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----- ---------------------------------- 1/7 [pillow]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ----------------- ---------------------- 3/7 [fonttools]\n",
+      "   ---------------------------- ----------- 5/7 [contourpy]\n",
+      "   ---------------------------- ----------- 5/7 [contourpy]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------- ----- 6/7 [matplotlib]\n",
+      "   ---------------------------------------- 7/7 [matplotlib]\n",
+      "\n",
+      "Successfully installed contourpy-1.3.2 cycler-0.12.1 fonttools-4.58.2 kiwisolver-1.4.8 matplotlib-3.10.3 pillow-11.2.1 pyparsing-3.2.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
