--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/Pandas_profiling.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/Pandas_profiling.ipynb
@@ -193,7 +193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
