--- a/Machine_Learning_Concept/Data_Gethering/Web_Scraping/web_scraping.ipynb
+++ b/Machine_Learning_Concept/Data_Gethering/Web_Scraping/web_scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
