--- a/Tensors/End_to_End.ipynb
+++ b/Tensors/End_to_End.ipynb
@@ -2,22 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib as plt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install torch\n",
-    "\n",
+    "# import numpy as np\n",
+    "# import matplotlib as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([5, 7, 9])\n"
+     ]
+    }
+   ],
+   "source": [
     "import torch\n",
     "a = torch.tensor([1, 2, 3])\n",
     "b = torch.tensor([4, 5, 6])\n",
@@ -26,9 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[19, 22],\n",
+      "        [43, 50]])\n"
+     ]
+    }
+   ],
    "source": [
     "A = torch.tensor([[1, 2], [3, 4]])\n",
     "B = torch.tensor([[5, 6], [7, 8]])\n",
@@ -37,9 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2],\n",
+      "        [3, 4],\n",
+      "        [5, 6]])\n"
+     ]
+    }
+   ],
    "source": [
     "C = torch.tensor([[1, 2, 3], [4, 5, 6]])\n",
     "print(C.view(3, 2))  # Reshape 2x3 matrix to 3x2\n"
@@ -48,7 +73,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
