Make Task and practics Types of data file

--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/Pandas_profiling.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/Pandas_profiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "PassengerId",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Survived",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Pclass",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Sex",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "SibSp",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Parch",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Ticket",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Fare",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Cabin",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Embarked",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "040e7d60-1481-4ad5-8da4-ba34fe9edd08",
+       "rows": [
+        [
+         "0",
+         "1",
+         "0",
+         "3",
+         "Braund, Mr. Owen Harris",
+         "male",
+         "22.0",
+         "1",
+         "0",
+         "A/5 21171",
+         "7.25",
+         null,
+         "S"
+        ],
+        [
+         "1",
+         "2",
+         "1",
+         "1",
+         "Cumings, Mrs. John Bradley (Florence Briggs Thayer)",
+         "female",
+         "38.0",
+         "1",
+         "0",
+         "PC 17599",
+         "71.2833",
+         "C85",
+         "C"
+        ],
+        [
+         "2",
+         "3",
+         "1",
+         "3",
+         "Heikkinen, Miss. Laina",
+         "female",
+         "26.0",
+         "0",
+         "0",
+         "STON/O2. 3101282",
+         "7.925",
+         null,
+         "S"
+        ],
+        [
+         "3",
+         "4",
+         "1",
+         "1",
+         "Futrelle, Mrs. Jacques Heath (Lily May Peel)",
+         "female",
+         "35.0",
+         "1",
+         "0",
+         "113803",
+         "53.1",
+         "C123",
+         "S"
+        ],
+        [
+         "4",
+         "5",
+         "0",
+         "3",
+         "Allen, Mr. William Henry",
+         "male",
+         "35.0",
+         "0",
+         "0",
+         "373450",
+         "8.05",
+         null,
+         "S"
+        ]
+       ],
+       "shape": {
+        "columns": 12,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -155,7 +306,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,27 +318,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sande\\AppData\\Local\\Temp\\ipykernel_3316\\12996374.py:2: DeprecationWarning: `import pandas_profiling` is going to be deprecated by April 1st. Please use `import ydata_profiling` instead.\n",
-      "  from pandas_profiling import ProfileReport\n",
-      "Summarize dataset: 100%|██████████| 47/47 [00:04<00:00, 11.05it/s, Completed]                       \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:04<00:00,  4.41s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:01<00:00,  1.66s/it]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 39.46it/s]\n"
+      "ERROR: Ignored the following versions that require a different python version: 4.0.0 Requires-Python >=3.7, <3.11; 4.1.0 Requires-Python >=3.7, <3.12; 4.1.1 Requires-Python >=3.7, <3.12; 4.1.2 Requires-Python >=3.7, <3.12; 4.10.0 Requires-Python <3.13,>=3.7; 4.11.0 Requires-Python <3.13,>=3.7; 4.12.0 Requires-Python <3.13,>=3.7; 4.12.1 Requires-Python <3.13,>=3.7; 4.12.2 Requires-Python <3.13,>=3.7; 4.13.0 Requires-Python <3.13,>=3.7; 4.14.0 Requires-Python <3.13,>=3.7; 4.15.0 Requires-Python <3.13,>=3.7; 4.15.1 Requires-Python <3.13,>=3.7; 4.16.0 Requires-Python <3.13,>=3.7; 4.16.1 Requires-Python <3.13,>=3.7; 4.2.0 Requires-Python >=3.7, <3.12; 4.3.0 Requires-Python >=3.7, <3.12; 4.3.1 Requires-Python >=3.7, <3.12; 4.3.2 Requires-Python >=3.7, <3.12; 4.4.0 Requires-Python >=3.7, <3.12; 4.5.0 Requires-Python >=3.7, <3.12; 4.5.1 Requires-Python >=3.7, <3.12; 4.6.0 Requires-Python >=3.7, <3.12; 4.6.1 Requires-Python >=3.7, <3.12; 4.6.2 Requires-Python >=3.7, <3.12; 4.6.3 Requires-Python >=3.7, <3.12; 4.6.4 Requires-Python >=3.7, <3.12; 4.6.5 Requires-Python >=3.7, <3.12; 4.7.0 Requires-Python >=3.7, <3.13; 4.8.3 Requires-Python <3.13,>=3.7; 4.9.0 Requires-Python <3.13,>=3.7\n",
+      "ERROR: Could not find a version that satisfies the requirement ydata-profiling (from versions: none)\n",
+      "ERROR: No matching distribution found for ydata-profiling\n"
      ]
     }
    ],
    "source": [
-    "# Install the required packages\n",
-    "from pandas_profiling import ProfileReport\n",
-    "prof = ProfileReport(df)\n",
-    "prof.to_file(output_file='output.html')"
+    "import sys\n",
+    "!{sys.executable} -m pip install ydata-profiling\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ydata_profiling'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Assuming 'df' is your DataFrame\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mydata_profiling\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ProfileReport\n\u001b[32m      4\u001b[39m profile = ProfileReport(df, title=\u001b[33m\"\u001b[39m\u001b[33mMy Profiling Report\u001b[39m\u001b[33m\"\u001b[39m, explorative=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      5\u001b[39m profile.to_file(\u001b[33m\"\u001b[39m\u001b[33moutput.html\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'ydata_profiling'"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'df' is your DataFrame\n",
+    "from ydata_profiling import ProfileReport\n",
+    "\n",
+    "profile = ProfileReport(df, title=\"My Profiling Report\", explorative=True)\n",
+    "profile.to_file(\"output.html\")\n"
    ]
   }
  ],
