Update code in Univariate analysis

--- a/Machine_Learning_Concept/Data_Gethering/Web_Scraping/web_scraping.ipynb
+++ b/Machine_Learning_Concept/Data_Gethering/Web_Scraping/web_scraping.ipynb
@@ -168,9 +168,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Company Name",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Rating",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Reviews",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Salaries",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Interviews",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Location",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Tags",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "8ef2b72f-a0fb-47c9-b335-8a04ebf1d91d",
+       "rows": [],
+       "shape": {
+        "columns": 7,
+        "rows": 0
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company Name</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Salaries</th>\n",
+       "      <th>Interviews</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Company Name, Rating, Reviews, Salaries, Interviews, Location, Tags]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
