--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/EDA_Using _Univariate_Analysis.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/EDA_Using _Univariate_Analysis.ipynb
@@ -795,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning",
+   "display_name": ".machinelearning (3.13.5)",
    "language": "python",
    "name": "python3"
   },
