--- a/Machine_Learning_Concept/Practics/TASK_01.ipynb
+++ b/Machine_Learning_Concept/Practics/TASK_01.ipynb
@@ -1963,11 +1963,19 @@
     "df['Sex_encoded'] = df['Sex'].map({'male': 0, 'female': 1})\n",
     "df[['Age', 'Fare', 'Sex_encoded']].corr()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b3d48e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning",
+   "display_name": ".machinelearning (3.13.5)",
    "language": "python",
    "name": "python3"
   },
