--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/Univariate_Anlysis.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/Univariate_Anlysis.ipynb
@@ -533,7 +533,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning (3.13.5)",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
