--- a/Ensemble_learning/Baging/Baggaing.ipynb
+++ b/Ensemble_learning/Baging/Baggaing.ipynb
@@ -2,42 +2,116 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
-    "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current sessio"
+    "# Step 1: Import Libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import BaggingClassifier,RandomTreesEmbedding,RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.datasets import load_diabetes\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_csv('/kaggle/input/iris/database.sqlite')"
+    "# Step 2: Load Dataset\n",
+    "from sklearn.datasets import load_diabetes\n",
+    "data = load_diabetes(as_frame=True)\n",
+    "df = data.frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert target into binary (for classification): e.g., above or below median\n",
+    "df['target'] = (df['target'] > df['target'].median()).astype(int)\n",
+    "\n",
+    "X = df.drop('target', axis=1)\n",
+    "y = df['target']\n",
+    "\n",
+    "# Split into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize the base estimator\n",
+    "# base_estimator = RandomForestClassifier(n_estimators=10, random_state=42)\n",
+    "\n",
+    "# Initialize the Bagging classifier\n",
+    "bagging = BaggingClassifier(n_estimators=10, random_state=42)\n",
+    "\n",
+    "# Train the Bagging classifier\n",
+    "bagging.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = bagging.predict(X_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score,precision_score,recall_score,f1_score,roc_auc_score,confusion_matrix,classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7191011235955056\n",
+      "Precision: 0.6666666666666666\n",
+      "Recall: 0.75\n",
+      "F1 Score: 0.7058823529411765\n",
+      "ROC AUC Score: 0.721938775510204\n",
+      "Confusion Matrix:\n",
+      " [[34 15]\n",
+      " [10 30]]\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.69      0.73        49\n",
+      "           1       0.67      0.75      0.71        40\n",
+      "\n",
+      "    accuracy                           0.72        89\n",
+      "   macro avg       0.72      0.72      0.72        89\n",
+      "weighted avg       0.73      0.72      0.72        89\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the performance of the Bagging classifier\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Precision:\", precision_score(y_test, y_pred))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred))\n",
+    "print(\"F1 Score:\", f1_score(y_test, y_pred))\n",
+    "print(\"ROC AUC Score:\", roc_auc_score(y_test, y_pred))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
