--- a/Machine_Learning_Concept/Practics/TASK_01.ipynb
+++ b/Machine_Learning_Concept/Practics/TASK_01.ipynb
@@ -302,108 +302,108 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>321</th>\n",
-       "      <td>322</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Danoff, Mr. Yoto</td>\n",
+       "      <th>607</th>\n",
+       "      <td>608</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Daniel, Mr. Robert Williams</td>\n",
        "      <td>male</td>\n",
        "      <td>27.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>349219</td>\n",
-       "      <td>7.8958</td>\n",
+       "      <td>113804</td>\n",
+       "      <td>30.5000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>608</th>\n",
-       "      <td>609</td>\n",
-       "      <td>1</td>\n",
+       "      <th>674</th>\n",
+       "      <td>675</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>Laroche, Mrs. Joseph (Juliette Marie Louise La...</td>\n",
+       "      <td>Watson, Mr. Ennis Hastings</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>239856</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>540</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Frolicher, Miss. Hedwig Margaritha</td>\n",
        "      <td>female</td>\n",
        "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>SC/Paris 2123</td>\n",
-       "      <td>41.5792</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>13568</td>\n",
+       "      <td>49.5000</td>\n",
+       "      <td>B39</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>294</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Haas, Miss. Aloisia</td>\n",
-       "      <td>female</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>349236</td>\n",
-       "      <td>8.8500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>306</th>\n",
-       "      <td>307</td>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Fleming, Miss. Margaret</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17421</td>\n",
-       "      <td>110.8833</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>62</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Icard, Miss. Amelie</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113572</td>\n",
-       "      <td>80.0000</td>\n",
-       "      <td>B28</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>733</th>\n",
-       "      <td>734</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>Berriman, Mr. William John</td>\n",
+       "      <td>Williams, Mr. Charles Eugene</td>\n",
        "      <td>male</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>28425</td>\n",
+       "      <td>244373</td>\n",
        "      <td>13.0000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>284</th>\n",
-       "      <td>285</td>\n",
+       "      <th>121</th>\n",
+       "      <td>122</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Smith, Mr. Richard William</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Moore, Mr. Leonard Charles</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>113056</td>\n",
-       "      <td>26.0000</td>\n",
-       "      <td>A19</td>\n",
+       "      <td>A4. 54510</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>801</th>\n",
+       "      <td>802</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Collyer, Mrs. Harvey (Charlotte Annie Tate)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>C.A. 31921</td>\n",
+       "      <td>26.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>457</th>\n",
+       "      <td>458</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kenyon, Mrs. Frederick R (Marion)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17464</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>D21</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -412,31 +412,31 @@
       ],
       "text/plain": [
        "     PassengerId  Survived  Pclass  \\\n",
-       "321          322         0       3   \n",
-       "608          609         1       2   \n",
-       "293          294         0       3   \n",
-       "306          307         1       1   \n",
-       "61            62         1       1   \n",
-       "733          734         0       2   \n",
-       "284          285         0       1   \n",
+       "607          608         1       1   \n",
+       "674          675         0       2   \n",
+       "539          540         1       1   \n",
+       "17            18         1       2   \n",
+       "121          122         0       3   \n",
+       "801          802         1       2   \n",
+       "457          458         1       1   \n",
        "\n",
-       "                                                  Name     Sex   Age  SibSp  \\\n",
-       "321                                   Danoff, Mr. Yoto    male  27.0      0   \n",
-       "608  Laroche, Mrs. Joseph (Juliette Marie Louise La...  female  22.0      1   \n",
-       "293                                Haas, Miss. Aloisia  female  24.0      0   \n",
-       "306                            Fleming, Miss. Margaret  female   NaN      0   \n",
-       "61                                 Icard, Miss. Amelie  female  38.0      0   \n",
-       "733                         Berriman, Mr. William John    male  23.0      0   \n",
-       "284                         Smith, Mr. Richard William    male   NaN      0   \n",
+       "                                            Name     Sex   Age  SibSp  Parch  \\\n",
+       "607                  Daniel, Mr. Robert Williams    male  27.0      0      0   \n",
+       "674                   Watson, Mr. Ennis Hastings    male   NaN      0      0   \n",
+       "539           Frolicher, Miss. Hedwig Margaritha  female  22.0      0      2   \n",
+       "17                  Williams, Mr. Charles Eugene    male   NaN      0      0   \n",
+       "121                   Moore, Mr. Leonard Charles    male   NaN      0      0   \n",
+       "801  Collyer, Mrs. Harvey (Charlotte Annie Tate)  female  31.0      1      1   \n",
+       "457            Kenyon, Mrs. Frederick R (Marion)  female   NaN      1      0   \n",
        "\n",
-       "     Parch         Ticket      Fare Cabin Embarked  \n",
-       "321      0         349219    7.8958   NaN        S  \n",
-       "608      2  SC/Paris 2123   41.5792   NaN        C  \n",
-       "293      0         349236    8.8500   NaN        S  \n",
-       "306      0          17421  110.8833   NaN        C  \n",
-       "61       0         113572   80.0000   B28      NaN  \n",
-       "733      0          28425   13.0000   NaN        S  \n",
-       "284      0         113056   26.0000   A19        S  "
+       "         Ticket     Fare Cabin Embarked  \n",
+       "607      113804  30.5000   NaN        S  \n",
+       "674      239856   0.0000   NaN        S  \n",
+       "539       13568  49.5000   B39        C  \n",
+       "17       244373  13.0000   NaN        S  \n",
+       "121   A4. 54510   8.0500   NaN        S  \n",
+       "801  C.A. 31921  26.2500   NaN        S  \n",
+       "457       17464  51.8625   D21        S  "
       ]
      },
      "execution_count": 6,
