--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/Bivariate&Multivariate_analysis.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/Bivariate&Multivariate_analysis.ipynb
@@ -1642,7 +1642,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning",
+   "display_name": ".machinelearning (3.13.5)",
    "language": "python",
    "name": "python3"
   },
